Fixing center aligning all p, h1 on index

--- a/Styling/darkmode.css
+++ b/Styling/darkmode.css
@@ -281,4 +281,6 @@ padding-bottom: -15px;
 }
 
 
-
+.centeredtitle {
+    text-align: center;
+}
